# security_scan_tescase_web

./: .gitignore  Bao_Cao_Thuc_Tap_Nghiencuu_Unquoted_Service_Path.docx  Bao_Cao_Thuc_Tap_WebSec_Test_Behavior_Tree.docx  Bao_Cao_Thuc_Tap_WebSec_Test_Behavior_Tree_UPDATED.docx  Danh_Sach_Testcase_SQL_Injection.xlsx  Dockerfile  HUONG_DAN_SU_DUNG.md  PENTESTGPT_WORKFLOW.md  README.md  conftest.py  headers.txt  pyproject.toml  pytest.ini  requirements.txt  temp_docx_content.txt  temp_docx_result.txt  test_cases.md  update_report.py
Demo_auto/: __init__.py  pentestgpt_pipeline.py  test_pentestgpt_all.py  time_pentestgpt.py
draw/: cicd_flow.drawio  framework_architecture.drawio  test_case_list.drawio  test_execution_flow.drawio
references/: attack_patterns.md  compliance_requirements.md  cryptography-implementation.md  owasp_top_10_checklist.md  responsible_disclosure.md  secure-coding-checklist.md  security-architecture-patterns.md  security_standards.md  threat-modeling-guide.md  vulnerability_management_guide.md
reports/: dashboard_20260630_121550.html  dashboard_20260703_110506.html  dashboard_20260703_110506.js  dashboard_20260703_110515.css  dashboard_20260703_110515.html  websec_report_20260618_113918.json  websec_report_20260619_114916.json  websec_report_20260621_095652.json  websec_report_20260621_095859.json  websec_report_20260621_095935.json  websec_report_20260621_095941.json  websec_report_20260621_095956.json  websec_report_20260621_100001.json  websec_report_20260621_100056.json  websec_report_20260621_100118.json
scripts/: add_bt_table.py  cli.py  (+12 more)
(+182 files in other folders)
